# Vehicle-Reg.-Dashboard

./: README.md  app.py  dashboard.py  data_collection.py  data_processing.py  database.py  pyproject.toml  requirements.txt
docs/: DATA_COLLECTION.md
