[project]
name = "vehicle-registration-analytics"
version = "0.1.0"
description = "Investor-focused dashboard for vehicle registrations (Vahan data)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.33",
    "plotly>=5.20",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "selenium>=4.21",
    "python-dateutil>=2.9",
]

[tool.setuptools]
package-dir = {"" = "."}
